Added the GetLights API call.

--- a/src/app/components/hue-controller/hue-controller.component.html
+++ b/src/app/components/hue-controller/hue-controller.component.html
@@ -2,14 +2,14 @@
 
   <div class="buttons">
 
-    <button (click)="test()"
+    <button (click)="NewUser()"
             mat-button color="primary">
       Generate User
     </button>
 
-    <button (click)="test()"
+    <button (click)="GetLights()"
             mat-button color="primary">
-      Test Button 2
+      Get All Lights
     </button>
 
     <button (click)="test()"
