Added the change state api endpoint.

--- a/src/app/components/hue-controller/hue-controller.component.html
+++ b/src/app/components/hue-controller/hue-controller.component.html
@@ -12,9 +12,9 @@
       Get All Lights
     </button>
 
-    <button (click)="NewUser()"
+    <button (click)="ChangeState()"
             mat-button color="primary">
-      Test Button 3
+      Change Light 1 State
     </button>
 
   </div>
