--- a/src/app/components/light-card/light-card.component.html
+++ b/src/app/components/light-card/light-card.component.html
@@ -1,16 +1,41 @@
 <mat-card class="card">
   <mat-card-header>
+    <div mat-card-avatar
+         class="light-color"></div>
     <mat-card-title>{{ light.name }}</mat-card-title>
   </mat-card-header>
-  <div class="light-color">
-
+  <div class="light-button-container">
+    <button mat-icon-button
+            class="light-button">
+      <mat-icon [ngClass]="{'on-state': light.state.on, 'off-state': !light.state.on }"
+                class="light-button-icon"
+                aria-hidden="false">wb_incandescent</mat-icon>
+    </button>
   </div>
   <mat-card-content>
+    <div class="controls">
+      <mat-form-field>
+        <mat-label>Brightness:</mat-label>
+        <input matInput type="text" [(ngModel)]="light.state.brightness">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Hue:</mat-label>
+        <input matInput type="text" [(ngModel)]="light.state.hue">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Saturation:</mat-label>
+        <input matInput type="text" [(ngModel)]="light.state.saturation">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Color Temp:</mat-label>
+        <input matInput type="text" [(ngModel)]="light.state.colorTemperature">
+      </mat-form-field>
+    </div>
     <p>
-      Hi
+      Color Mode: {{ light.state.colorMode }}
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>One day</button>
+    <button mat-button>Update State</button>
   </mat-card-actions>
 </mat-card>
