--- a/src/app/components/light-card/light-card.component.html
+++ b/src/app/components/light-card/light-card.component.html
@@ -6,7 +6,8 @@
   </mat-card-header>
   <div class="light-button-container">
     <button mat-icon-button
-            class="light-button">
+            class="light-button"
+            (click)="ToggleOn()">
       <mat-icon [ngClass]="{'on-state': light.state.on, 'off-state': !light.state.on }"
                 class="light-button-icon"
                 aria-hidden="false">wb_incandescent</mat-icon>
@@ -27,6 +28,10 @@
         <input matInput type="text" [(ngModel)]="light.state.saturation">
       </mat-form-field>
       <mat-form-field>
+        <mat-label>XY:</mat-label>
+        <input matInput type="text" [(ngModel)]="light.state.xy">
+      </mat-form-field>
+      <mat-form-field>
         <mat-label>Color Temp:</mat-label>
         <input matInput type="text" [(ngModel)]="light.state.colorTemperature">
       </mat-form-field>
@@ -36,6 +41,7 @@
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>Update State</button>
+    <button mat-button
+            (click)="UpdateState()">Update State</button>
   </mat-card-actions>
 </mat-card>
